Добавлено отображение списка активных скриптов страницы с возможностью редактирования по клику

--- a/popup.html
+++ b/popup.html
@@ -24,8 +24,9 @@
     <div class="card">
       <div class="k">Текущая страница</div>
       <div class="v" id="url">—</div>
-      <div class="k" style="margin-top:10px;">Подходящих правил</div>
-      <div class="v" id="matched">—</div>
+      <div class="k" style="margin-top:10px;">Активные скрипты</div>
+      <div id="scriptsList" class="scripts-list"></div>
+      <div id="noScripts" class="no-scripts">Нет подходящих скриптов</div>
     </div>
 
     <div class="buttons">
