Изменение названия пакета

--- a/options.html
+++ b/options.html
@@ -4,14 +4,14 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Dynamic JS Runner — Правила</title>
+  <title>ITW JS — Правила</title>
   <link rel="stylesheet" href="options.css" />
 </head>
 
 <body>
   <header>
     <div class="brand">
-      <div class="h1">Dynamic JS Runner</div>
+      <div class="h1">ITW JS</div>
       <div class="h2">Правила запуска пользовательских JS-скриптов</div>
     </div>
     <div class="actions">
