--- a/popup.html
+++ b/popup.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Dynamic JS Runner</title>
+  <title>ITW JS</title>
   <link rel="stylesheet" href="popup.css" />
 </head>
 <body>
   <div class="wrap">
-    <div class="title">Dynamic JS Runner</div>
+    <div class="title">ITW JS</div>
 
     <div class="row">
       <label class="switch">
