--- a/popup.html
+++ b/popup.html
@@ -22,8 +22,13 @@
     </div>
 
     <div class="card">
-      <div class="k">Текущая страница</div>
-      <div class="v" id="url">—</div>
+      <div class="current-page">
+        <div class="current-info">
+          <div class="k">Текущая страница</div>
+          <div class="v" id="url">—</div>
+        </div>
+        <button id="createScript" class="secondary small">Создать скрипт</button>
+      </div>
       <div class="k" style="margin-top:10px;">Активные скрипты</div>
       <div id="scriptsList" class="scripts-list"></div>
       <div id="noScripts" class="no-scripts">Нет подходящих скриптов</div>
