--- a/popup.html
+++ b/popup.html
@@ -29,7 +29,7 @@
         </div>
         <button id="createScript" class="secondary small">Создать скрипт</button>
       </div>
-      <div class="k" style="margin-top:10px;">Активные скрипты</div>
+      <div class="k" style="margin-top:10px;">Скрипты для страницы</div>
       <div id="scriptsList" class="scripts-list"></div>
       <div id="noScripts" class="no-scripts">Нет подходящих скриптов</div>
     </div>
@@ -42,6 +42,11 @@
     <div class="hint">
       Скрипты исполняются автоматически при открытии страницы, если URL совпадает с шаблоном.
     </div>
+  </div>
+
+  <div id="scriptMenu" class="context-menu" aria-hidden="true">
+    <button id="menuToggle" class="context-item">Отключить</button>
+    <button id="menuDelete" class="context-item danger">Удалить</button>
   </div>
 
   <script src="popup.js"></script>
