Добавить контекстное меню в список правил

--- a/options.html
+++ b/options.html
@@ -102,6 +102,11 @@
     </div>
   </main>
 
+  <div id="ruleMenu" class="context-menu" aria-hidden="true">
+    <button id="menuToggle" class="context-item">Отключить</button>
+    <button id="menuDelete" class="context-item danger">Удалить</button>
+  </div>
+
   <script src="options.js"></script>
 </body>
 
